@@ -1,3 +1,7 @@
+Version Next
+
+    - Added ThreadLocalHolder
+
 Version 1.0.349 Released April 27, 2012
 
     - Fixed issue with circular autowiring dependencies that include the
